--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="dist/reset.css" />
     <link rel="stylesheet" href="dist/reveal.css" />
-    <link rel="stylesheet" href="dist/theme/black.css" id="theme" />
+    <link rel="stylesheet" href="dist/theme/night.css" id="theme" />
     <link rel="stylesheet" href="dist/custom.css" />
     <link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme" />
   </head>
@@ -31,7 +31,40 @@
           <div style="font-size: 0.75em" class="text-light">
             Simple, sensor-controlled, mobile 2D game in which you can try your hand as a monster truck driver
           </div>
-          <img src="/assets/images/home-page.jpg" alt="game-home-page" class="rounded" />
+          <div class="d-flex justify-content-center">
+            <div class="phone my-5">
+              <img src="/assets/images/home-page.jpg" alt="game-home-page" class="rounded" />
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="mb-5 fw-bold text-uppercase text-warning">Instruction</div>
+          <div style="font-size: 0.75em" class="text-light">
+            To control rotation of your truck you need to rotate your phone and touch to move forward and backward
+          </div>
+          <div class="d-flex justify-content-center">
+            <div class="phone my-5">
+              <img src="/assets/images/game-control.jpg" alt="game-control-page" />
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="mb-5 fw-bold text-uppercase text-warning">Many ways to express yourself</div>
+          <div style="font-size: 0.75em" class="text-light">
+            <span> You can choose among various logos and use your personal, unique nick. Let the world know your </span>
+            <span class="text-warning fw-bold"> SICK </span>
+            <span> driving skills! </span>
+          </div>
+          <div class="d-flex justify-content-center">
+            <div class="row">
+              <div class="col phone my-5">
+                <img src="/assets/images/graphic-1.jpg" alt="game-control-page" />
+              </div>
+              <div class="col phone my-5">
+                <img src="/assets/images/graphic-2.jpg" alt="game-control-page" />
+              </div>
+            </div>
+          </div>
         </section>
         <!-- ------------------------------------------- / ------------------------------------------- -->
       </div>
