--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- ------------------------------------------- SLIDES ------------------------------------------- -->
       <div class="slides">
         <!-- ----------------------- Slide 1 ---------------------- -->
-        <section data-background-video="assets/video/gameplay.mp4" data-background-video-loop data-background-video-muted data>
+        <section data-background-video="assets/video/gameplay.mp4" data-background-video-loop data-background-video-muted>
           <div class="header-bg py-4">
             <!-- <img src="assets/images/game-logo.png" alt="game-logo" style="margin-bottom: 250px" /> -->
             <div class="fw-bold" style="color: #bababa; font-size: 1.5em; margin-bottom: 250px">SICK TRUCKER</div>
@@ -32,22 +32,24 @@
             Simple, sensor-controlled, mobile 2D game in which you can try your hand as a monster truck driver
           </div>
           <div class="d-flex justify-content-center">
-            <div class="phone my-5">
+            <div class="phone phone-one-size my-5">
               <img src="/assets/images/home-page.jpg" alt="game-home-page" class="rounded" />
             </div>
           </div>
         </section>
+        <!-- ----------------------- Slide 3 ---------------------- -->
         <section>
           <div class="mb-5 fw-bold text-uppercase text-warning">Instruction</div>
           <div style="font-size: 0.75em" class="text-light">
             To control rotation of your truck you need to rotate your phone and touch to move forward and backward
           </div>
           <div class="d-flex justify-content-center">
-            <div class="phone my-5">
+            <div class="phone phone-one-size my-5">
               <img src="/assets/images/game-control.jpg" alt="game-control-page" />
             </div>
           </div>
         </section>
+        <!-- ----------------------- Slide 4 ---------------------- -->
         <section>
           <div class="mb-5 fw-bold text-uppercase text-warning">Many ways to express yourself</div>
           <div style="font-size: 0.75em" class="text-light">
@@ -58,14 +60,35 @@
           <div class="d-flex justify-content-center">
             <div class="row">
               <div class="col phone my-5">
-                <img src="/assets/images/graphic-1.jpg" alt="game-control-page" />
+                <img src="/assets/images/graphic-1.jpg" alt="nick-choose-screen" />
               </div>
-              <div class="col phone my-5">
-                <img src="/assets/images/graphic-2.jpg" alt="game-control-page" />
+              <div class="col phone my-5 ml-1">
+                <img src="/assets/images/graphic-2.jpg" alt="logo-choose-screen" />
               </div>
             </div>
           </div>
         </section>
+        <!-- ----------------------- Slide 5 ---------------------- -->
+        <section>
+          <div class="fw-bold text-uppercase text-warning">Varius, beautiful biomes</div>
+          <div class="row">
+            <div class="col phone my-5">
+              <img src="/assets/images/biome1.jpg" alt="biome-1-screen" />
+            </div>
+            <div class="col phone my-5 ml-1">
+              <img src="/assets/images/biome2.jpg" alt="biome-2-screen" />
+            </div>
+          </div>
+          <div class="my-0 row">
+            <div class="col phone my-5">
+              <img src="/assets/images/biome3.jpg" alt="biome-3-screen" />
+            </div>
+            <div class="col phone my-5 ml-1">
+              <img src="/assets/images/biome4.jpg" alt="biome-4-screen" />
+            </div>
+          </div>
+        </section>
+
         <!-- ------------------------------------------- / ------------------------------------------- -->
       </div>
     </div>
@@ -82,6 +105,7 @@
       Reveal.initialize({
         hash: true,
         plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+        backgroundTransition: "zoom",
       });
     </script>
   </body>
