Cleanup and mino fixes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <!-- ----------------------- Slide 1 ---------------------- -->
         <section data-background-video="assets/video/gameplay.mp4" data-background-video-loop data-background-video-muted>
           <div class="header-bg py-4">
-            <!-- <img src="assets/images/game-logo.png" alt="game-logo" style="margin-bottom: 250px" /> -->
             <div class="fw-bold" style="color: #bababa; font-size: 1.5em; margin-bottom: 250px">SICK TRUCKER</div>
             <div class="fw-bold" style="color: #bababa; font-size: 1em">THE GAME</div>
           </div>
@@ -41,7 +40,7 @@
         <section>
           <div class="mb-5 fw-bold text-uppercase text-warning">Instruction</div>
           <div style="font-size: 0.75em" class="text-light">
-            To control rotation of your truck you need to rotate your phone and touch to move forward and backward
+            To control your truck you need to rotate your phone and use touch to move forward and backward
           </div>
           <div class="d-flex justify-content-center">
             <div class="phone phone-one-size my-5">
@@ -53,7 +52,7 @@
         <section>
           <div class="mb-5 fw-bold text-uppercase text-warning">Many ways to express yourself</div>
           <div style="font-size: 0.75em" class="text-light">
-            <span> You can choose among various logos and use your personal, unique nick. Let the world know your </span>
+            <span> You can choose from various logos and use your personal, unique nick. Let the world know your </span>
             <span class="text-warning fw-bold"> SICK </span>
             <span> driving skills! </span>
           </div>
@@ -94,7 +93,7 @@
           </section>
           <!-- ----------------------- Slide 6 veritcal ---------------------- -->
           <section>
-            <div class="fw-bold text-uppercase text-warning">Varius, beautiful biomes</div>
+            <div class="fw-bold text-uppercase text-warning">Located on HUGE map</div>
             <div class="row" id="row-test">
               <div class="col phone my-5">
                 <img src="/assets/images/biome5.jpg" alt="biome-5-screen" />
@@ -124,9 +123,9 @@
               <span class="text-warning fw-bold"> have fun </span>
             </div>
             <div class="my-5">
-              <span>Beside that you should also </span>
+              <span>Beside that, you should also </span>
               <span class="text-warning fw-bold"> collect the key </span>
-              <span>to make a mark on the leaderboard</span>
+              <span>to make a mark on the leaderboard and show the world how fast you are</span>
             </div>
           </div>
           <div class="d-flex justify-content-center">
@@ -163,15 +162,15 @@
             <div class="w-50 mx-auto">
               <span> Hi, I'm </span>
               <span class="text-warning fw-bold">Łukasz</span>
-              <span>I enjoy doing nice stuff. Hope that you enjoy my work</span>
-              <span>If you'd lik you can also check my other projects on my</span>
+              <span>I love doing nice stuff. I hope that you enjoy my work</span>
+              <span>If you'd like, you can also check my other projects on my</span>
 
               <button
                 class="btn btn-lg btn-outline-warning my-4"
                 onclick="location.href='https://github.com/Ukasz09'"
                 value="Go to Google"
               >
-                GitHub
+                GitHub Page
               </button>
             </div>
           </div>
@@ -191,10 +190,9 @@
     <script>
       Reveal.initialize({
         hash: true,
-        plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
         backgroundTransition: "zoom",
-        // autoSlide: 8000,
-        // loop: true,
+        autoSlide: 8000,
+        loop: true,
       });
     </script>
   </body>
