Update readme, app name fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>reveal.js</title>
+    <title>Sick Trucker Game</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="dist/reset.css" />
@@ -162,7 +162,7 @@
             <div class="w-50 mx-auto">
               <span> Hi, I'm </span>
               <span class="text-warning fw-bold">Łukasz</span>
-              <span>I love doing nice stuff. I hope that you enjoy my work</span>
+              <span>I love doing nice stuff. I hope that you enjoy my work.</span>
               <span>If you'd like, you can also check my other projects on my</span>
 
               <button
